@@ -1,3 +1,12 @@
+2021-08-18  Megan Gardner  <megan_gardner@apple.com>
+
+        Add Highlight API to features.json
+        https://bugs.webkit.org/show_bug.cgi?id=208226
+
+        Reviewed by Simon Fraser.
+
+        * features.json:
+
 2021-08-18  Jer Noble  <jer.noble@apple.com>
 
         REGRESSION(r280723): Protected HLS + EME playback fails with "temporary error"
